fix spacing for increased heatmap tab width

--- a/h/sass/app.scss
+++ b/h/sass/app.scss
@@ -29,7 +29,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
 .annotator-heatmap {
   background: hsla(0, 0, 0, .1);
   border: solid thin rgba($grayLighter, .4);
-  left: 10px;
+  left: 17px;
   height: 100%;
   position: fixed;
   top: 0;
@@ -45,7 +45,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
   @include perspective(100px);
   color: rgb(238, 238, 238);
   cursor: pointer;
-  left: -7px;
+  left: 0px;
   position: fixed;
   height: 20.1px;
   width: 40.1px;
@@ -76,11 +76,12 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
   }
 
   &:hover {
-    left: -5px;
+    left: 2px;
   }
 
   &.lower, &.upper {
-    left: 0;
+    @include single-transition(margin-top, .2s);
+    left: 7px;
     width: 33.1px;
     height: 26.1px;
     .label {
@@ -89,7 +90,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
     }
 
     &:hover {
-      left: 0px;
+      left: 7px;
     }
   }
 
@@ -199,7 +200,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
   background: url('../images/noise_1.png');
   background-attachment: fixed;
   height: 100%;
-  margin-left: $heatmap-width + 10px;
+  margin-left: $heatmap-width + 17px;
   position: relative;
 }
 
@@ -223,6 +224,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
   position: absolute;
   width: 100%;
   z-index: 5;
+  left: 7px;
 
   & > * {
     display: inline-block;
